<resources>
<string name="message_config_error_user_password">server, username and password are required</string>
<string name="dialog_start_import">Start Import</string>
<string name="menu_cancel_sync">Cancel Sync</string>
<string name="label_office_location">Office location</string>
<string name="signup_failed_invalid_captcha">Oops! The code you entered did not match. Try again!</string>
<string name="label_company">Company</string>
<string name="upg_one_way_no_longer_supported">IMPORTANT: Your client settings indicate that you were performing one-way sync for some PIM data. In the latest version of our clients, the option to choose one-way sync is no longer available and all syncs of PIM data (e.g. contacts, calendar) will be two-way only. As a precautionary measure, we have disabled sync for the data types that you were synching one-way. You may re-enable them at any time from Settings. Please note that once re-enabled, future syncs of PIM data will be two-way, affecting data both on the server and on the client. Once you have read and understood the information above, click OK to enter the client.</string>
<string name="dialog_no_wifi_availabale">No WI-FI is available. To sync media over your cellular plan, click Continue. To skip media sync , click Cancel.</string>
<string name="home_last_sync"></string>
<string name="signup_login_label">Already have an account?</string>
<string name="sync_in_progress_dialog">A sync is currently running, please wait.</string>
<string name="signup_please_wait">Please wait&#8230;</string>
<string name="message_saving_contact">Saving contact&#8230;</string>
<string name="advanced_settings_band_saver_title">Bandwidth Saver</string>
<string name="status_connecting">Connecting&#8230;</string>
<string name="sync_files_folder_label">The files in the folder below are synched from your phone to the server</string>
<string name="dialog_import_sim_contacts">SIM contacts</string>
<string name="home_powered">Powered by Funambol</string>
<string name="advanced_settings_log_level_trace">Trace</string>
<string name="dialog_import_contacts_later">You may import your contacts from other address book accounts listed below:</string>
<string name="label_data_event">Event</string>
<string name="sendlog_no_username">You must enter your username to send logs</string>
<string name="label_street">Street</string>
<string name="psw_label">PASSWORD</string>
<string name="menu_close">Close</string>
<string name="label_data_relation">Relation</string>
<string name="signup_logging_in">Logging you in&#8230;</string>
<string name="sync_pictures_folder_label">The pictures in the folder below are synched from your phone to the server</string>
<string name="sync_direction_do_nothing">Do nothing</string>
<string name="sync_mode_manual">Manual</string>
<string name="changePicture">Change icon</string>
<string name="status_sd_card_unavailable">SD Card not available</string>
<string name="status_invalid_url">Invalid Url</string>
<string name="label_more">More</string>
<string name="signup_phone_number">PHONE NO.</string>
<string name="sendlog_post_url">http://10.4.192.52/logApp/postLogs.php</string>
<string name="dialog_refresh_from">From server to device</string>
<string name="notification_online_quota_full_server_ticker">__APP_NAME__ warning</string>
<string name="status_no_space_on_device">Insufficient device storage</string>
<string name="signup_failed_bad_phone_message">Oops! Phone number is not valid. The phone number may only contain the following characters: numbers (0-9), \'.\', \'-\', \'(\', \')\', x. The username must be at least 9 characters and at most 15 characters long.</string>
<string name="advanced_settings_reset_button_label">Start Reset&#8230;</string>
<string name="dialog_save">Do you want to save?</string>
<string name="advanced_settings_view_log_button_label">View Log</string>
<string name="label_select">Select label</string>
<string name="signup_terms_and_conditions4">Privacy Policy</string>
<string name="signup_terms_and_conditions3">and</string>
<string name="signup_terms_and_conditions2">Terms &amp; Conditions</string>
<string name="signup_terms_and_conditions1">By clicking SIGN UP, I agree to the</string>
<string name="dialog_ok">OK</string>
<string name="advanced_settings_import_button_label">Import&#8230;</string>
<string name="notification_online_quota_full_server_title">__APP_NAME__ warning</string>
<string name="signup_failed_username_exists">Oops! This phone number is already used by an existing account. Choose a different username to create a new account or, if you already have an account, use your username and password to login.</string>
<string name="status_quota_exceeded">Insufficient online storage</string>
<string name="sync_direction_two_way">Two-way sync</string>
<string name="message_config_error_save">Save failed</string>
<string name="save_button">Save</string>
<string name="sync_in_progress_dialog_save">Please wait until the sync has completed to change settings.</string>
<string name="signup_captcha_help_text">Please type the code you see below and click SIGN UP.</string>
<string name="use_photo_as_primary">Use this photo</string>
<string name="cancel_button">Cancel</string>
<string name="signup_button">SIGN UP</string>
<string name="status_sync">Syncing</string>
<string name="advanced_settings_dev_settings_info">These settings should only be changed by Advanced users familiar with the inner workings of the application. Under normal circumstances, you would not need to change these settings.</string>
<string name="files_provider_label">Files</string>
<string name="status_connection_blocked">Network Access Denied</string>
<string name="menu_about">About</string>
<string name="message_not_send_to_server">Some changes could not be recorded correctly and will not be synchronized.</string>
<string name="message_contact_saved">Contact saved</string>
<string name="conf_automatically_help">Please enable Auto-sync in \"Accounts &amp; sync\" settings to be able to set automatic sync</string>
<string name="label_neighborhood">Neighborhood</string>
<string name="description_download_video">Videos are downloaded to your device\'s media gallery. Videos in a format that cannot be played by your device may be played using third party media player applications. Maximum size is 100 MBs per video.</string>
<string name="sync_direction_upload_only">Upload only</string>
<string name="label_country">Country</string>
<string name="advanced_settings_send_log_button_label">Send Log</string>
<string name="type_notes">Notes</string>
<string name="label_from">from</string>
<string name="description_upload_video">Videos are uploaded from your device\'s media gallery. Maximum size is 100 MBs per video.</string>
<string name="dialog_refresh">Reset</string>
<string name="label_zip_code">ZIP code</string>
<string name="conf_c2s_push">Push client changes to the server</string>
<string name="type_files">Files</string>
<string name="dialog_wait_for_media_identification">Please wait&#8230;</string>
<string name="message_sync_running_wait">A sync is running. Please wait.</string>
<string name="description_two_way_video">Videos are uploaded from and downloaded to your device\'s media gallery. Videos in a format that cannot be played by your device may be played using third party media player applications. Maximum size is 100 MBs per video.</string>
<string name="label_click_to_add">Click to add</string>
<string name="dialog_import_no_items">There are no contacts to import.</string>
<string name="label_middle_name">Middle name</string>
<string name="conf_day">day</string>
<string name="label_type_spouse">Spouse</string>
<string name="dialog_import_contacts_first">We recommend that you import your contacts from other address book accounts listed below:</string>
<string name="label_data_organization">Organization</string>
<string name="label_account_contact"> __ACCOUNT_LABEL__ contact</string>
<string name="about_version">Version</string>
<string name="label_contact_edit">Edit contact</string>
<string name="settings_saved">Settings saved</string>
<string name="signup_help_text">Enter your phone number and choose a password for this account.</string>
<string name="sync_direction_prompt">Select sync direction</string>
<string name="status_partial_failure">Sync not completed</string>
<string name="conf_file_path_text">Files are uploaded from and downloaded to the __FOLDER__ folder on your SD Card.</string>
<string name="close_button">Close</string>
<string name="status_complete_failure">Last sync failed</string>
<string name="message_nothing_to_sync">You have not chosen to sync any categories.  Please configure the client</string>
<string name="label_name_prefix">Name prefix</string>
<string name="removePicture">Remove icon</string>
<string name="settings_changed_alert">Do you want to save changes?</string>
<string name="dev_settings_label">Remote names</string>
<string name="type_all_enabled">All the above</string>
<string name="notification_storage_full_device_title">__APP_NAME__ warning</string>
<string name="label_type_work">Work</string>
<string name="videos_provider_label">Videos</string>
<string name="dialog_cancel">Cancel</string>
<string name="label_type_anniversary">Anniversary</string>
<string name="label_data_name">Name</string>
<string name="signup_username_hint">"Include country code e.g. +1-650-555-1212 for USA"</string>
<string name="message_storage_limit">You\'re running out of space on your device. Make room on your device by removing existing media or files and then try again.</string>
<string name="dialog_and">And</string>
<string name="type_videos">Videos</string>
<string name="conf_polling_pim_duration">Interval:</string>
<string name="status_confirm_slow">Full sync in progress</string>
<string name="menu_save">Save</string>
<string name="alert_one_account_supported_2">account is supported.</string>
<string name="alert_one_account_supported_1">Only one</string>
<string name="alert_contacts_reset">Your account information has changed. Your contacts and calendar will be replaced by ones from the new account.</string>
<string name="label_data_address">Postal address</string>
<string name="status_cancelling">Cancelling&#8230; Please Wait</string>
<string name="dialog_sync_now">Sync now</string>
<string name="dialog_import_no_address_books">There are no more address book accounts to import.</string>
<string name="signup_show_password">Show password</string>
<string name="dialog_slow_text2">.  This process may take several minutes, and can use a lot of network bandwidth.  Are you sure you want to continue? (Yes in 20 seconds&#8230;)</string>
<string name="advanced_settings_dev_settings_title">App Internals</string>
<string name="powered_by_funambol">Powered by Funambol and PTBV Sync!</string>
<string name="source_code_text">In accordance with GNU AGPL, the source code of ChBoSync is available at:</string>
<string name="contentdescr_logo">Logo</string>
<string name="contentdescr_logoPoweredBy">Logo: Powered by Funambol</string>
<string name="url_sourcecode">https://code.google.com/p/chbosync4android\n(to be retired)</string>
<string name="agpl_text">For the full text of the GNU AGPL click on the following link:</string>
<string name="url_agpl">https://gnu.org/licenses/agpl-3.0.en.html</string>
<string name="basedOnPtbvAndFunambol"><![CDATA[ChBoSync is based on the <i>PTBV SyncML client</i> by Andreas Wolff, which in turn is based on the <i>Funambol SyncML client</i>. ChBoSync was released as an open source project in November 2014.]]></string>
<string name="usage_of_joda_time_library">This app uses \"Joda-Time\" as external library:</string>
<string name="joda_time_project_url">"http://www.joda.org/joda-time/"</string>
<string name="joda_license">Joda-Time is licenced under the \"Apache License Version 2.0\":</string>
<string name="joda_license_url">http://www.joda.org/joda-time/license.html</string>
</resources>