<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Funambol is a mobile platform developed by Funambol, Inc. 
 * Copyright (C) 2003 - 2007 Funambol, Inc.
 * 
 * This program is free software; you can redistribute it and/or modify it under
 * the terms of the GNU Affero General Public License version 3 as published by
 * the Free Software Foundation with the addition of the following permission 
 * added to Section 15 as permitted in Section 7(a): FOR ANY PART OF THE COVERED
 * WORK IN WHICH THE COPYRIGHT IS OWNED BY FUNAMBOL, FUNAMBOL DISCLAIMS THE 
 * WARRANTY OF NON INFRINGEMENT  OF THIRD PARTY RIGHTS.
 * 
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
 * details.
 * 
 * You should have received a copy of the GNU Affero General Public License 
 * along with this program; if not, see http://www.gnu.org/licenses or write to
 * the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 * MA 02110-1301 USA.
 * 
 * You can contact Funambol, Inc. headquarters at 643 Bair Island Road, Suite 
 * 305, Redwood City, CA 94063, USA, or at email address info@funambol.com.
 * 
 * The interactive user interfaces in modified source and object code versions
 * of this program must display Appropriate Legal Notices, as required under
 * Section 5 of the GNU Affero General Public License version 3.
 * 
 * In accordance with Section 7(b) of the GNU Affero General Public License
 * version 3, these Appropriate Legal Notices must retain the display of the
 * "Powered by Funambol" logo. If the display of the logo is not reasonably 
 * feasible for technical reasons, the Appropriate Legal Notices must display
 * the words "Powered by Funambol". 
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="center_vertical"
              android:id="@+id/aboutMainLayout">

    <TextView android:text="@string/powered_by_funambol" 
    	      style="@style/powered_by_style"
              android:id="@+id/powered_by_label"/>
    
    
    <ScrollView android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0">
        
        <LinearLayout android:id="@+id/aboutItemsLayout"                      
                      android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_gravity="center_horizontal"
                      android:layout_height="wrap_content">

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:paddingTop="15dip"
                       android:paddingBottom="15dip"
                       android:contentDescription="@string/contentdescr_logo"
                       android:src="@drawable/logo"/>

            <TextView  android:id="@+id/aboutCopyTitle"
                       android:visibility="gone"
                       style="@style/copy_title" />
            
            <TextView  android:id="@+id/basedOnPtbvAndFunambolText"
                       android:visibility="visible"
                	   android:text="@string/basedOnPtbvAndFunambol"                       
                       style="@style/copy_text" />                                          
            
            <TextView  android:id="@+id/aboutCopyText"
                       android:visibility="gone"
                       style="@style/copy_text" />

            <TextView  android:id="@+id/aboutCompanyName"
                       style="@style/company_name" />

            <TextView  android:id="@+id/aboutCopyRight"
                       style="@style/copy_right" />

            <TextView  android:id="@+id/aboutCopyUrl"
                       android:visibility="gone"
                       style="@style/copy_link" /><!-- This style makes URLs clickable, so they can be opened in a browser! -->

            <TextView  android:id="@+id/aboutPortalInfo"
                       android:visibility="gone"
                       style="@style/portal_info" />

            <TextView  android:id="@+id/aboutLicense"
                       android:visibility="gone"
                       style="@style/licence_text" />

            <TextView  android:id="@+id/poweredBy"
                       android:visibility="gone"
                       style="@style/copy_text" />

            <ImageView android:id="@+id/poweredByLogo"
                       android:visibility="gone"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:paddingTop="12dip"
                       android:paddingBottom="12dip"
                       android:contentDescription="@string/contentdescr_logoPoweredBy"
                       android:src="@drawable/logo"/>

            <TextView  android:text="@string/source_code_text"
                       android:visibility="visible"
                       style="@style/copy_text" />
            
            <TextView android:id="@+id/textview_sourcecode_url"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:paddingTop="5dip"
                      android:paddingBottom="5dip"
                      android:text="@string/url_sourcecode"
                      style="@style/copy_link" />

            <TextView android:text="@string/agpl_text"
                      android:visibility="visible"
                      style="@style/copy_text" />
            
            <TextView android:id="@+id/textview_agpl_url"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:paddingTop="5dip"
                      android:paddingBottom="10dip"
                      android:text="@string/url_agpl"
                      style="@style/copy_link" />       
                      
            <TextView android:text="@string/usage_of_joda_time_library"
                      android:paddingTop="10dip"
                      android:visibility="visible"
                      style="@style/copy_text"     />     
                      
            <TextView android:id="@+id/textview_joda_project_url"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"                      
                      android:paddingTop="5dip"
                      android:paddingBottom="10dip"
                      android:text="@string/joda_time_project_url"
                      style="@style/copy_link"  />
            
            <TextView android:text="@string/joda_license"
                      android:paddingTop="5dip"
                      android:visibility="visible"
                      style="@style/copy_text" />
            
            <TextView android:id="@+id/textview_joda_license_url"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"                      
                      android:paddingTop="5dip"
                      android:paddingBottom="25dip"                      
                      android:text="@string/joda_license_url"
                      style="@style/copy_link"  />                                  
                        
        </LinearLayout>
    </ScrollView>

    <LinearLayout  
                  android:id="@+id/homeScreenButtonBar"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  style="@android:style/ButtonBar">

        <Button android:id="@+id/aboutClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dip"
                android:paddingRight="50dip"
                android:text="@string/close_button"/>
                
    </LinearLayout>
</LinearLayout>
